# haskell-nix-template

./: README.md  default.nix  haskell-nix-template.cabal  shell.nix
nix/: sources.json
